ci: Improve ci
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>